--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -21,7 +21,7 @@
             android:id="@+id/splash_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/edu"
+            app:srcCompat="@drawable/edulogo"
             android:layout_gravity="center" />
     </LinearLayout>
 </RelativeLayout>
