--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,6 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:theme="@style/TitleColor">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -18,9 +19,7 @@
             app:popupTheme="@style/MyPopup"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
     </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_main" />
-
+    <include layout="@layout/content_main"/>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
