--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
             android:title="Exit"/>
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Broadcast">
         <menu>
             <item
                 android:id="@+id/nav_upload"
@@ -30,7 +30,7 @@
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/send"
-                android:title="Send" />
+                android:title="Send Message" />
         </menu>
     </item>
 
