--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundsplash"
     android:id="@+id/splash_layout">
     <LinearLayout
+        android:id="@+id/splash_icon_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:background="#fff"
         android:gravity="center"
         android:scrollbars="none"
         android:paddingBottom="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
-
         <ImageView
             android:id="@+id/splash_logo"
             android:layout_width="wrap_content"
