--- a/app/src/main/res/layout/card_view_messages.xml
+++ b/app/src/main/res/layout/card_view_messages.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_message"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="#FFFFFF"
     android:paddingTop="16dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="0dp"
-    android:layout_marginBottom="0dp">
-    <RelativeLayout
+    android:paddingRight="16dp">
+    <LinearLayout
+        android:orientation="vertical"
         android:id="@+id/messages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,19 +21,33 @@
             android:gravity="center"
             android:paddingLeft="2dp"
             android:paddingBottom="2dp">
-            <TextView
-                android:id="@+id/subject_message"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/time_message"
-                android:gravity="center"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_alignParentLeft="true"
-                android:text="Subject:"
-                android:layout_weight="1"
-                android:textAppearance="@style/Subject"
-                />
+                android:layout_gravity="start"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/profilepic"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/profilepic"
+                    android:layout_marginTop="2dp"
+                    android:layout_toLeftOf="@+id/author_message"
+                    android:layout_gravity="start|bottom"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+                <TextView
+                    android:id="@+id/author_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toRightOf="@+id/profilepic"
+                    android:layout_gravity="bottom"
+                    android:paddingLeft="5dp"
+                    android:text=""
+                    android:layout_weight="1"
+                    android:textAppearance="@style/sender_style"/>
+            </LinearLayout>
             <TextView
                 android:id="@+id/time_message"
                 android:layout_width="wrap_content"
@@ -47,73 +59,64 @@
                 android:textColor="@color/menuColor"
                 android:text="Time"/>
         </FrameLayout>
-        <FrameLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:id="@+id/message_layout_message"
             android:layout_marginTop="5dp"
             android:layout_below="@+id/title_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="2dp">
-            <TextView
-                android:id="@+id/message_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text=""
-                android:textColor="@color/menuColor"
-                android:layout_toLeftOf="@+id/urgent"
-                android:paddingRight="50dp"
-                android:maxLines="1"
-                android:ellipsize="end"/>
-            <TextView
-                android:id="@+id/attach"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/attach"
-                android:layout_toRightOf="@+id/message_message"
-                android:layout_gravity="end"
-                android:rotation="45"
-                android:layout_marginRight="25dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"/>
-            <TextView
-                android:id="@+id/urgent"
-                android:layout_width="20dp"
-                 android:layout_height="20dp"
-                android:background="@drawable/notimportant"
-                android:layout_toRightOf="@+id/attach"
-                android:layout_gravity="end"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"/>
-        </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/subject_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="Subject:"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/Subject"
+                    />
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/message_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:text=""
+                    android:textColor="@color/menuColor"
+                    android:layout_toLeftOf="@+id/urgent"
+                    android:paddingTop="5dp"
+                    android:paddingRight="50dp"
+                    android:textSize="7pt"
+                    android:maxLines="5"
+                    android:ellipsize="end"/>
+                <TextView
+                    android:id="@+id/urgent"
+                    android:layout_width="20dp"
+                     android:layout_height="20dp"
+                    android:background="@drawable/notimportant"
+                    android:layout_toRightOf="@+id/attach"
+                    android:layout_gravity="end"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"/>
+            </FrameLayout>
+        </LinearLayout>
         <FrameLayout
             android:id="@+id/author_layout_message"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_below="@+id/message_layout_message"
             android:paddingLeft="2dp">
-            android:layout_marginBottom="0dp">
-            <TextView
-                android:id="@+id/profilepic"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/profilepic"
-                android:layout_marginTop="2dp"
-                android:layout_toLeftOf="@+id/author_message"
-                android:layout_gravity="start"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
-            <TextView
-                android:id="@+id/author_message"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginLeft="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_toRightOf="@+id/profilepic"
-                android:text=""
-                android:layout_weight="1"
-                android:textAppearance="@style/sender_style"/>
             <TextView
                 android:id="@+id/urgent_text"
                 android:layout_width="0dp"
@@ -136,16 +139,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_alignParentRight="true"/>
-
-            <ImageView
-                android:layout_toRightOf="@+id/messageid"
-                android:id="@+id/delete_message"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_gravity="end"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/retrieve"/>
         </FrameLayout>
-    </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
