--- a/app/src/main/res/layout/progress.xml
+++ b/app/src/main/res/layout/progress.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/progress_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,8 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:indeterminateBehavior="repeat"
         android:layout_centerVertical="true">
-        </ProgressBar>
+    </ProgressBar>
     <ImageView
         android:id="@+id/progress_image"
         android:layout_width="wrap_content"
