--- a/app/src/main/res/layout/video.xml
+++ b/app/src/main/res/layout/video.xml
@@ -180,7 +180,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_toRightOf="@+id/spinner"
-                                android:text="Category:"
+                                android:text="District:"
                                 android:inputType="textPersonName"
                                 android:textAppearance="@style/network_style"/>
                         </FrameLayout>
